--- a/Esercizi HTML e CSS/esercitazione_html_css.html
+++ b/Esercizi HTML e CSS/esercitazione_html_css.html
@@ -28,13 +28,37 @@
             label{
                 font-weight: bold;
                 margin-bottom: 5px;
+                display: block;
             }
+
+            input[type="text"]:hover{
+                background-color: aquamarine;
+            }
+
+            input[type="text"],
+            input[type="email"],
+            input[type="password"]{
+                width: 98%;
+                padding: 20px;
+                margin-bottom: 30px;
+            }
+
+            input[type="submit"]:hover{
+                cursor:pointer;
+                background-color: forestgreen;
+            }
+
+            input[type="reset"]:hover{
+                background-color: red;
+            }
+
+            input[type="submit"],
+            input[type="reset"]{
+                padding: 20px;
+            }
+
+
             
-
-
-
-            
-
         </style>
     </head>
     <body>
@@ -50,7 +74,7 @@
             <input type="password" id="password" name="password" required>
 
             <label for="confirm-password">Conferma password:</label><br>
-            <input type="password" id="confirm-password" name="confirm-password" required>
+            <input type="password" id="confirm-password" name="confirm-password" required><br>
 
 
             <input type="submit" value="Registrati">
